--- a/portfolio/src/components/skills/skills.css
+++ b/portfolio/src/components/skills/skills.css
@@ -1,12 +1,20 @@
 .skills{
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-self: center;
     align-items: center;
     justify-content: center;
     margin-top: 50px;
     margin-bottom: 50px;
     color: #000;
+    padding: 0 10rem;
+}
+.skills h2{
+    font-size: 4rem;
+    font-style: italic;
+    font-weight: 600;
+    margin-bottom: 2rem;
 }
 .logo{
     display: grid;
@@ -25,5 +33,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+.carousel-slide h4{
+    font-size: 3px;
+    color: #000;
 }
   
