--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -3,13 +3,14 @@
     grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
-    padding: 8rem 10rem 6rem 10rem;
-    background-color: #f5f5f5;
+    padding: 9rem 10rem 6rem 15rem;
+    background-color: #1F1F38;
     gap: 1rem;
 }
 
-img{
-    border-radius: 20px 70px;
+.profile img{
+    /* border-radius: 20px 70px; */
+    border-radius: 50%;
 }
 
 .intro{
@@ -19,19 +20,18 @@ img{
     align-items: flex-start;
     justify-content: center;
     gap: 1rem;
+    color: #fff;
 }
 .intro h2{
     font-size: 1.5rem;
     font-weight: 600;
-    color:  #777;
 }
 .intro h4{
     font-size: 2.5rem;
     font-weight: 400;
-    color: #333;
+    margin-bottom: 10px;
 }
 .intro p{
     font-size: 1.3rem;
     font-weight: 300;
-    color: #777;
 }
