--- a/portfolio/src/components/footer/footer.css
+++ b/portfolio/src/components/footer/footer.css
@@ -1,19 +1,17 @@
 footer{
-    background-color: #f8f9fa;
+    background-color: #000;
     padding: 50px 0;
     text-align: center;
-    font-size: 14px;
-    color: #6c757d;
+    font-size: 16px;
+    color: #fff;
     position: relative;
     bottom: 0;
     width: 100%;
-    margin-top: 50px;
-    border-top: 1px solid #e9ecef;
 }
 footer p{
-    margin-bottom: 0;
+    margin-bottom: 5px;
 }
 footer a{
-    color: #6c757d;
+    color: #fff;
     text-decoration: none;
 }
