--- a/portfolio/src/components/projects/projects.css
+++ b/portfolio/src/components/projects/projects.css
@@ -2,16 +2,16 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    margin-top: 20px;
+    padding-top: 5rem;
     justify-content: center;
     align-items: center;
     width: 100%;
-    background: #f5f5f5;
+    background: #1F1F38;
 }
 .projects h3{
-    font-size: 4rem;
-    font-style: italic;
-    font-weight: 600;
+    font-size: 3rem;
+    color: #4DB5FF;
+    font-weight: 400;
     margin-bottom: 2rem;
 }
 .project{
@@ -23,13 +23,21 @@
 .project-card{
     display: flex;
     flex-direction: column;
-    width: 80%;
+    max-width: 520px;
+    /* width: 80%; */
     padding: 10px;
-    background: orange;
+    background: #f5f5f5;
     flex: 0 0 47%;
     margin-bottom: 2rem;
     border-radius: 10px;
     box-shadow: 0 0 10px 0 rgba(0,0,0,0.2);
+}
+.project-card img{
+    width: 100%;
+    height: 200px;
+    object-fit: fill;
+    border-radius: 10px;
+    margin-bottom: 10px;
 }
 .skillz{
     display: flex;
