--- a/portfolio/src/components/skills/skills.css
+++ b/portfolio/src/components/skills/skills.css
@@ -5,15 +5,15 @@
     align-self: center;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    color: #000;
-    padding: 0 10rem;
+    background: #1F1F38;
+    color: #fff;
+    /* padding-top: 5rem; */
+    padding: 5rem 10rem 0 10rem;
 }
 .skills h2{
-    font-size: 4rem;
-    font-style: italic;
-    font-weight: 600;
+    font-size: 3rem;
+    color: #4DB5FF;
+    font-weight: 400;
     margin-bottom: 2rem;
 }
 .logo{
@@ -26,7 +26,7 @@
 .logo i{
     font-size: 5rem;
     margin: 0 1rem;
-    color: #000;
+    color: #fff;
 }
 .carousel-slide {
     display: flex;
