--- a/portfolio/src/components/footer/footer.css
+++ b/portfolio/src/components/footer/footer.css
@@ -15,3 +15,9 @@ footer a{
     color: #fff;
     text-decoration: none;
 }
+
+@media (max-width: 640px){
+    footer{
+        padding: 20px 0;
+    }
+}
