--- a/portfolio/src/components/skills/skills.css
+++ b/portfolio/src/components/skills/skills.css
@@ -39,3 +39,14 @@
     color: #000;
 }
   
+@media (max-width: 640px){
+    .skills{
+        padding: 3rem 4rem;
+    }
+    .logo{
+        width: 100%;
+    }
+    .logo i{
+        font-size: 3rem;
+    }
+}
