--- a/portfolio/src/components/projects/projects.css
+++ b/portfolio/src/components/projects/projects.css
@@ -76,18 +76,22 @@
 
 @media(max-width: 640px){
     .projects{
+        background: #f5f5f5;
         padding-top: 3rem;
     }
     .projects h3{
         font-size: 2rem;
     }
     .project-card{
+        background: #1F1F38;
+        color: #fff;
         flex: 0 0 100%;
     }
     .project-card img{
         height: 150px;
     }
     .project-card button{
+        background: #4DB5FF;
         width: 30%;
     }
 }
