--- a/portfolio/src/components/projects/projects.css
+++ b/portfolio/src/components/projects/projects.css
@@ -39,7 +39,7 @@
 }
 .project-card img{
     width: 100%;
-    height: 200px;
+    height: auto;
     object-fit: fill;
     border-radius: 10px;
     margin-bottom: 10px;
